apps/code-server/Services.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
spec:
  type: LoadBalancer
  selector:
    app: code-server
  ports:
    - name: web
      protocol: TCP
      port: 8443
      targetPort: 8443
